Updated files courses and latest change to repo project

--- a/StudentEnrollment.Client/Layout/NavMenu.razor
+++ b/StudentEnrollment.Client/Layout/NavMenu.razor
@@ -22,17 +22,18 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+                <small class="ms-2 text-danger"> [Need to Login]</small>
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="students">
-                <span class="bi bi-people-fill-nav-menu" aria-hidden="true"></span> Add Student
+                <span class="bi bi-people-fill" aria-hidden="true"></span> Student
                 <small class="ms-2 text-danger"> [Need to Login]</small>
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="courses">
-                <span class="bi bi-book-fill" aria-hidden="true"></span> Add Course
+                <span class="bi bi-book-fill" aria-hidden="true"></span>  Course
                 <small class="ms-2 text-danger"> [Need to Login]</small>
             </NavLink>
         </div>
